# Scheduler-Simulator-Project

./: .gitignore  AUTHORS.txt  CMakeLists.txt  README.md  Valgrinderror.txt  buggy.c  gattosilvestro.txt  linkedlist.c  listmaker.c  listmaker.h  main.c  makefile  not_preemptive.c  not_preemptive.h  notpr.txt  outnon.txt  outpr.txt  output.txt  par  parameters  parameters.c  parameters.out  preemp-Yoga720Fede.txt  preemp.txt  preemptive.c  preemptive.h  prova.txt  simulator
